--- a/google.html
+++ b/google.html
@@ -19,7 +19,7 @@
 		</header>
 		<center>
         <h1 style="color:lawngreen;">
-            Geeks For Geeks
+				Google Maps
         </h1>
           
         <div>
