--- a/page.html
+++ b/page.html
@@ -14,6 +14,7 @@
 				<a href="index.html">Homepage</a>
 				<a href="resume.html">Resume</a>
 				<a href="page.html">Recipe for Pizza</a>
+				<a href="google.html">Google Maps</a>
 			</nav>
 		</header>
 		<h1>Pizza Recipe</h1>
