--- a/google.html
+++ b/google.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 		<title>Google Maps</title>
 		<link rel="stylesheet" href="css/style.css"/>
+		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	
 	<body>
