--- a/page.html
+++ b/page.html
@@ -37,6 +37,7 @@
 				<li>¼ cup semolina flour</li>
 			</ul>
 		<h2>Preperation</h2>
+		<div>
 		<ul>
 			<li>“Bloom” the yeast by sprinkling the sugar and yeast in the warm water. Let sit for 10 minutes, until bubbles form on the surface.
 
@@ -62,5 +63,6 @@
 
 			<li>Add any garnish of your preference and enjoy!</li>
 		</ul>
+		</div>
 	</body>
 </html>
