--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,7 @@
 				<li>ecarbo@hawk.iit.edu</li>
 			</ul>
 		</section>
+		<div>
 		<section id="Eduaction">
 		<h2>Eduacation</h2>
 		<ul>
@@ -35,14 +36,18 @@
 			<li>Highschool - Noble Street College Prep</li>
 			<li>Undergraduate - Illinois Institute of Technology</li>
 		</ul>
+		</div>
 		</section>
+		<div>
 		<section id="Awards">
 		<h2>Awards</h2>
 			<ul>
 				<li>Honor Roll</li>
 				<li>Soccer MVP</li>
 			</ul>
+		</div>
 		</section>
+		<div>
 		<section id="Experience">
 		<h2>Experience</h2>
 			<h3>2016-2016</h3>
@@ -57,7 +62,9 @@
 			<ul>
 				<li>Now working at another contrustion company learning more skills</li>
 			</ul>
+		</div>
 		</section>
+		<div>
 		<section id="Skills">
 		<h2>Skills</h2>
 			<ul>
@@ -66,6 +73,7 @@
 				<li>Basic Contrustion Skills</li>
 				<li>Basic Coding experience</li>
 			</ul>
+		</div>
 		</section>
 		<footer>
 			<p>Created by Eduardo Carbo</p>
