--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<a href="page.html">Recipe for Pizza</a>
 				<a href="google.html">Google Maps</a>
 			</nav>
+		<div>
 		</header>
 		<h1>HOME PAGE</h1>
 		<p>This page is the home page for the three websites you see above. For this page specifically, I will give a brief description of who I am, as a person, and I will also describe the other pages in this page as well</p>
@@ -28,6 +29,7 @@
 		<h2>Who am I</h2>
 		<img src="https://hosting.photobucket.com/images/i/eddie045/IMG_0869.PNG?" alt=”alternate” title=”logo” height=350 width=200>
 		<p>My name is Eduardo Carbo. I am 19 years old and I am an undergraduate at IIT. What I like to do on my free time is either play video games or play sports like basketball and soccer. I was born in Queens, New York and moved to Chicago when I was barely 11 months old and been living here since. I love technology and what you can do with it. It is very versitile and can help us overcome things that can be a burden to us and even make something efficent. <p>
+		</div>
 	</body>
 </html>
 		
