adding the css media queries

--- a/resume.html
+++ b/resume.html
@@ -29,6 +29,7 @@
 			</ul>
 		</section>
 		<div>
+		 <div class="col-3 col-s-3 menu">
 		<section id="Eduaction">
 		<h2>Eduacation</h2>
 		<ul>
@@ -39,6 +40,7 @@
 		</div>
 		</section>
 		<div>
+		 <div class="col-3 col-s-3 menu">
 		<section id="Awards">
 		<h2>Awards</h2>
 			<ul>
@@ -48,6 +50,7 @@
 		</div>
 		</section>
 		<div>
+		 <div class="col-3 col-s-3 menu">
 		<section id="Experience">
 		<h2>Experience</h2>
 			<h3>2016-2016</h3>
@@ -65,6 +68,7 @@
 		</div>
 		</section>
 		<div>
+		 <div class="col-3 col-s-3 menu">
 		<section id="Skills">
 		<h2>Skills</h2>
 			<ul>
