modifying div to other html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h2>Resume</h2>
 		<p>This page will have my almost-real resume on it. This isn't my real mastery resume but is close to what I can give you. But with what that resume has so far, I know I will be adding more when my life continues on from college to getting jobs after college.</p> 
 		</div>
-		<div>
+		<div class="warning">
 		<h2>Pizza Recipe</h2>
 		<p>This page will show you have to make and cook your own pizza and it will also include a video on how to make one.</p>
 		</div>
