--- a/page.html
+++ b/page.html
@@ -36,7 +36,7 @@
 				<li>1½ tablespoons kosher salt</li>
 				<li>¼ cup semolina flour</li>
 			</ul>
-		<div>
+		<div class="warning">
 		<h2>Preperation</h2>
 		<ul>
 			<li>“Bloom” the yeast by sprinkling the sugar and yeast in the warm water. Let sit for 10 minutes, until bubbles form on the surface.
