--- a/page.html
+++ b/page.html
@@ -21,11 +21,14 @@
 		<h1>Pizza Recipe</h1>
 		<h3>Pizza Recipe by Tasty</h3>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/sv3TXMSv6Lw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div class="warning">
 		<h2>Things you will need to cook and prep</h2>
 			<ul>
 				<li>A dough roller</li>
 				<li>Large mixing bowl</li>
 			</ul>
+		</div>
+		<div class="warning">
 		<h2>Ingredients -makes 4 pizzas-</h2>
 			<ul>
 				<li>2½ cups (600 milliliters) warm water</li>
@@ -36,6 +39,7 @@
 				<li>1½ tablespoons kosher salt</li>
 				<li>¼ cup semolina flour</li>
 			</ul>
+		</div>
 		<div class="warning">
 		<h2>Preperation</h2>
 		<ul>
