--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<title>Recipe for Pizza</title>
 		<link rel="stylesheet" href="css/style.css"/>
-		<script type="text/javascript" src="js/script.js"></script>
+		<script src="js/script.js"></script>
 	</head>
 	
 	<body>
