--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 				<li>ecarbo@hawk.iit.edu</li>
 			</ul>
 		</section>
-		 <div class="col-3 col-s-3 menu",class="warning">
+		 <div class="warning">
 		<section id="Eduaction">
 		<h2>Eduacation</h2>
 		<ul>
@@ -38,7 +38,7 @@
 		</ul>
 		</section>
 		</div>
-		 <div class="col-3 col-s-3 menu",class="warning">
+		 <div class="warning">
 		<section id="Awards">
 		<h2>Awards</h2>
 			<ul>
@@ -48,7 +48,7 @@
 		</section>
 		</div>
 		<div>
-		 <div class="col-3 col-s-3 menu",class="warning">
+		 <div class="warning">
 		<section id="Experience">
 		<h2>Experience</h2>
 			<h3>2016-2016</h3>
@@ -66,7 +66,7 @@
 		</section>
 		</div>
 		<div>
-		 <div class="col-3 col-s-3 menu",class="warning">
+		 <div class="warning">
 		<section id="Skills">
 		<h2>Skills</h2>
 			<ul>
