--- a/google.html
+++ b/google.html
@@ -19,33 +19,17 @@
 				<a href="google.html">Google Maps</a>
 			</nav>
 		</header>
-	<meta charset="utf-8">
-	<style>
-		#map {
-	  		height: 100%;
-		}
+    <h3>My Google Maps</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
 
-		html, body {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
-	</style>
-</head>
-<body>
-	<div id="map"></div>
-	<script>
-		let map;
-		function initMap() {
-			map = new google.maps.Map( document.getElementById( 'map' ), {
-				center: {
-					lat: 51.513329,
-					lng: -0.088950
-				},
-				zoom: 14
-			});
-		}
-	</script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
+  </body>
+</html>
+
 </body>
 </html>
